THRIFT-4622: Resolve typedef'd list-element type Client: c_glib